# fastgram-cli

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
src/fastai/: cli.py  init_cli.py
src/fastgram/: cli.py  init_cli.py
src/fastgram/commands/: project.py
src/fastgram/database/: __init__.py  base.py
src/fastgram/database/models/: __init__.py  users.py
