[project]
name = "fastapi-cli"
version = "0.1.1"
description = "CLI tool for FastAPI - generate SSL certificates and more"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NEFORCEO", email = "n7for8572@gmail.com"}
]
keywords = ["cli", "fastapi", "ssl", "certificate", "tool"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pre-commit>=4.5.1",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[project.scripts]
fastai = "fastai.cli:main"

[project.urls]
Homepage = "https://github.com/ndugram/fastai-cli"
Repository = "https://github.com/ndugram/fastai-cli"
Issues = "https://github.com/ndugram/fastai-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastai"]
