[project]
name = "fastgram-cli"
version = "0.1.6"
description = "CLI tool for FastAPI - generate SSL certificates and more"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NEFORCEO", email = "n7for8572@gmail.com"}
]
keywords = ["cli", "fastgram", "ssl", "certificate", "tool"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
    "typer>=0.21.1",
    "uvicorn>=0.27.0",
]

[project.scripts]
fastgram = "fastgram.cli:main"

[project.urls]
Homepage = "https://github.com/ndugram/fastgram-cli"
Repository = "https://github.com/ndugram/fastgram-cli"
Issues = "https://github.com/ndugram/fastgram-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastgram"]
